добавлен тест для 100% покрытия

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
                         <configuration>
                             <rules>
                                 <rule>
+                                    <element>BUNDLE</element>
                                     <limits>
                                         <limit>
                                             <counter>LINE</counter>
